compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__attribute_javascript.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(javascript, \"./one.mjs\", \"one\")\npub fn one(x: Int) -> Int {\n  todo\n}\n"
---
----- SOURCE CODE

@external(javascript, "./one.mjs", "one")
pub fn one(x: Int) -> Int {
  todo
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([one/1]).

-file("/root/project/test/my/mod.rakun", 3).
-spec one(integer()) -> integer().
one(X) ->
    erlang:error(#{rakun_error => todo,
            message => <<"`todo` expression evaluated. This code has not yet been implemented."/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"one"/utf8>>,
            line => 4}).
