compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__both_externals_no_valid_impl.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
expression: "\n@external(javascript, \"one\", \"one\")\npub fn js() -> Nil\n\n@external(erlang, \"one\", \"one\")\npub fn erl() -> Nil\n\npub fn should_not_be_generated() {\n  js()\n  erl()\n}\n"
---
----- SOURCE CODE

@external(javascript, "one", "one")
pub fn js() -> Nil

@external(erlang, "one", "one")
pub fn erl() -> Nil

pub fn should_not_be_generated() {
  js()
  erl()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([erl/0]).

-file("/root/project/test/my/mod.rakun", 6).
-spec erl() -> nil.
erl() ->
    one:one().
