compiler-core/src/erlang/tests/snapshots/rakun_core__erlang__tests__external_fn__no_body_or_implementation.snap
---
source: compiler-core/src/erlang/tests/external_fn.rs
assertion_line: 224
expression: "\npub fn one(x: Int) -> Float\n"
---
----- SOURCE CODE

pub fn one(x: Int) -> Float


----- ERROR
error: Function without an implementation
  ┌─ /src/one/two.rakun:2:1
  │
2 │ pub fn one(x: Int) -> Float
  │ ^^^^^^^^^^^^^^^^^^

We can't compile this function as it doesn't have an
implementation. Add a body or an external implementation
using the `@external` attribute.
